--- a/Test02/Views/KeToan/QLDonNo.cshtml
+++ b/Test02/Views/KeToan/QLDonNo.cshtml
@@ -9,49 +9,65 @@
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 
 }
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+@{
+    var checkmess = (string)TempData["edithd"];
+    if (checkmess == "oke")
+    {
+        <script>
+            swal({
+                title: "Đã cập nhật đơn hàng nợ thành công",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
 
+
+}
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
             <div class="tile-body">
-                
-                    <ul class="nav nav-tabs">
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/ketoan/QLDonHang">Đơn chưa thanh toán</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Đơn nợ</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="~/ketoan/QLDonThanhToan">Đơn đã thanh toán</a>
-                        </li>
-                    </ul>
-                    <div class="row" style="padding-top:10px;">                     
-                        <div class="col-sm-2">
-                            <a class="btn btn-secondary btn-sm print-file" title="In" onclick="myApp.printTable()">
-                                <i class="fas fa-print"></i> In dữ liệu
-                            </a>
-                        </div>
-                        <div class="col-sm-2">
-                            <a class="btn btn-secondary btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KeToan/QLDonNo">
-                            <i class="fas fa-copy"></i> Làm mới danh sách</a>
-                        </div>
-                        <div class="col-sm-6">
-                            @using (Html.BeginForm("QLDonNo", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
-                            {
-                                
-                                    @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm" })
-                                    @*<input type="submit" value="Search" class="btn btn-danger btn-sm"/>*@
-                                    @*<input type="Text" class="form-control mx-sm-3" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập tên đại lý cần tìm">*@
-                                    <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
-                             
 
-                            }
-                        </div>
-
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/ketoan/QLDonHang">Đơn chưa thanh toán</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Đơn nợ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/ketoan/QLDonThanhToan">Đơn đã thanh toán</a>
+                    </li>
+                </ul>
+                <div class="row" style="padding-top:10px;">
+                    <div class="col-sm-2">
+                        <a class="btn btn-secondary btn-sm print-file" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
                     </div>
-                 
-                
+                    <div class="col-sm-2">
+                        <a class="btn btn-secondary btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KeToan/QLDonNo">
+                            <i class="fas fa-copy"></i> Làm mới danh sách
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        @using (Html.BeginForm("QLDonNo", "KeToan", FormMethod.Post, new { @class = "form-group-sm" }))
+                        {
+
+                            @Html.DropDownList("thangs", (IEnumerable<SelectListItem>)TempData["thangs"], htmlAttributes: new { @class = "form-control-sm" })
+                            @*<input type="submit" value="Search" class="btn btn-danger btn-sm"/>*@
+                            @*<input type="Text" class="form-control mx-sm-3" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập tên đại lý cần tìm">*@
+                            <input type="submit" class="btn btn-danger btn-sm" value="Tìm theo tháng">
+
+
+                        }
+                    </div>
+
+                </div>
+
+
 
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
@@ -77,7 +93,7 @@
                                     }
                                     @foreach (var item in Model)
                                     {
-                                        if (item.TrangThai == "Đã xét duyệt" && item.TinhTrangThanhToan == "Đang nợ")
+                                        if (item.TinhTrangThanhToan == "Đang nợ")
                                         {
                                             <tr>
                                                 <td>
@@ -115,8 +131,8 @@
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     @*<a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>*@
+                                                            <i class="fas fa-trash-alt"></i>
+                                                        </a>*@
                                                     <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng">
                                                         <i class="fas fa-train"></i>
                                                     </a>
@@ -131,10 +147,10 @@
                     </div>
                 </div>
 
-</div>
+            </div>
 
         </div>
-       
+
 
 
     </div>
